# cr_predictor

./: Dockerfile  OGL.md  README.md  cr_predictor.py  pyproject.toml
cr_model/: objects.py  utils.py
training_set/: srd_training.csv
